# consulting-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: claude_desktop_config.json
src/: audit_tools.py  doc_tools.py  rag_tools.py  server.py  utils.py
tests/: test_doc_tools.py  test_rag_tools.py  test_server.py
